Improve thread safety and UI initialization in simulation