@@ -15,7 +15,6 @@ import de.schulprojekt.duv.util.SimulationConfig;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 /**
  * The core simulation orchestrator.
@@ -25,7 +24,6 @@ import java.util.stream.Collectors;
 public class SimulationEngine {
 
     // --- CONSTANTS (Configuration) ---
-    // Defines how long a scandal remains in the active list before being removed
     private static final int SCANDAL_MAX_AGE_TICKS = 200;
 
     // --- FIELDS (State) ---
@@ -63,15 +61,11 @@ public class SimulationEngine {
 
         // 4. Scandal Systems
         this.scandalScheduler = new ScandalScheduler(distributionProvider);
-        // Buffer size for array (Number of parties + Reserve)
         this.impactCalculator = new ScandalImpactCalculator(params.getNumberOfParties() + 10);
     }
 
     // --- INITIALIZATION ---
 
-    /**
-     * Resets the simulation completely and re-initializes population and parties.
-     */
     public void initializeSimulation() {
         state.reset();
         scandalScheduler.reset();
@@ -80,7 +74,7 @@ public class SimulationEngine {
         // Load and setup parties
         partyRegistry.initializeParties(parameters, distributionProvider);
 
-        // Generate voter population (parallelized)
+        // Generate voter population
         voterPopulation.initialize(
                 parameters.getTotalVoterCount(),
                 partyRegistry.getParties().size(),
@@ -101,41 +95,38 @@ public class SimulationEngine {
         state.incrementStep();
 
         // 1. Scandal Management
-        // Remove old scandals
         state.getActiveScandals().removeIf(e -> state.getCurrentStep() - e.occurredAtStep() > SCANDAL_MAX_AGE_TICKS);
 
-        // Check if a new scandal occurs (Exponential Distribution)
         if (scandalScheduler.shouldScandalOccur() && partyRegistry.getParties().size() > 1) {
             triggerNewScandal();
         }
 
         // 2. Calculate Scandal Impact
-        // IMPORTANT: We only fetch ACUTE pressure here.
-        // Permanent damage is handled separately in VoterBehavior.
         double[] acutePressures = impactCalculator.calculateAcutePressure(
                 state.getActiveScandals(),
                 partyRegistry.getParties(),
                 state.getCurrentStep()
         );
 
-        // Process recovery from permanent damages
         impactCalculator.processRecovery(partyRegistry.getParties(), parameters.getTotalVoterCount());
 
-        // 3. Voter Decisions (Parallel Processing)
-        return voterBehavior.processVoterDecisions(
+        // 3. Voter Decisions
+        List<VoterTransition> transitions = voterBehavior.processVoterDecisions(
                 voterPopulation,
                 partyRegistry.getParties(),
                 parameters,
                 acutePressures,
                 impactCalculator
         );
+        recalculateCounts();
+
+        return transitions;
     }
 
     /**
-     * Reacts to parameter changes (e.g., from GUI Sliders).
+     * Reacts to parameter changes.
      */
     public void updateParameters(SimulationParameters newParams) {
-        // Check for structural changes (requires to be reset)
         boolean structuralChange = (newParams.getNumberOfParties() != parameters.getNumberOfParties()) ||
                 (newParams.getTotalVoterCount() != parameters.getTotalVoterCount());
 
@@ -143,7 +134,6 @@ public class SimulationEngine {
         distributionProvider.initialize(newParams);
 
         if (structuralChange) {
-            // Re-initialize if structure changes (e.g. array sizes changed)
             initializeSimulation();
         }
     }
@@ -154,38 +144,28 @@ public class SimulationEngine {
 
     // --- HELPER METHODS (Private) ---
 
-    /**
-     * Triggers a new random scandal.
-     */
     private void triggerNewScandal() {
-        // Filter: "Undecided" (Index 0) cannot have a scandal
         List<Party> realParties = partyRegistry.getParties().stream()
                 .filter(p -> !p.getName().equals(SimulationConfig.UNDECIDED_NAME))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!realParties.isEmpty()) {
-            // Select random target and scandal type
             Party target = realParties.get(random.nextInt(realParties.size()));
             Scandal s = csvLoader.getRandomScandal();
 
-            // Create event and store in state
             ScandalEvent event = new ScandalEvent(s, target, state.getCurrentStep());
             state.addScandal(event);
-
-            // Update party statistics
             target.incrementScandalCount();
         }
     }
 
     /**
-     * Counts supporters for all parties once (Initial Setup).
-     * During runtime, VoterBehavior uses efficient delta updates.
+     * Counts supporters for all parties based on the current population state.
      */
     private void recalculateCounts() {
         int[] counts = new int[partyRegistry.getParties().size()];
         int maxIdx = counts.length - 1;
 
-        // Iterate over all voters (fast array access)
         for (int i = 0; i < voterPopulation.size(); i++) {
             int idx = voterPopulation.getPartyIndex(i);
             if (idx <= maxIdx) {
